--- a/src/API/ByteBites/appsettings.json
+++ b/src/API/ByteBites/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Auth0": {
+    "Domain": "kodestallion.au.auth0.com",
+    "Audience": "bytebites-api.johannesmogashoa.co.za"
+  },
   "AllowedHosts": "*"
 }
