--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -27,7 +27,7 @@
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "next": "^15.2.3",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "^5.0.0-beta.29",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
