--- a/.dockerignore
+++ b/.dockerignore
@@ -23,3 +23,11 @@
 **/values.dev.yaml
 LICENSE
 README.md
+**/.env
+**/Dockerfile
+**/.dockerignore
+**/node_modules
+**/npm-debug.log
+**/README.md
+**/.next
+**/.git
