--- a/src/Frontend/.env.example
+++ b/src/Frontend/.env.example
@@ -1,20 +1,9 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
-
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
-
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
-
-# Next Auth
-# You can generate a new secret on the command line with:
-# npx auth secret
-# https://next-auth.js.org/configuration/options#secret
-AUTH_SECRET=""
-
-# Next Auth Discord Provider
-AUTH_DISCORD_ID=""
-AUTH_DISCORD_SECRET=""
+AUTH0_SECRET=""
+APP_BASE_URL='https://localhost:3000'
+AUTH0_DOMAIN=""
+AUTH0_CLIENT_ID=""
+AUTH0_CLIENT_SECRET=""
+# 'If your application is API authorized add the variables AUTH0_AUDIENCE and AUTH0_SCOPE'
+AUTH0_AUDIENCE=""
+AUTH0_SCOPE='openid profile email read:recipes'
+BACKEND_API_URL="https://localhost:5001"
