--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.8.0",
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -33,7 +35,9 @@
     "react-hook-form": "^7.60.0",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.5",
-    "zod": "^3.25.76"
+    "vaul": "^1.1.2",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
