--- a/src/API/ByteBites/appsettings.Development.json
+++ b/src/API/ByteBites/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433,;Database=ByteBites;User Id=sa;Password=#Johannes2023!;TrustServerCertificate=True;"
   }
 }
